Prevent scroll on mobile device

--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ input{
     .container{
         width: 90vw;
     }
+    html{
+        overflow: unset;
+    }
     
 }
 
